--- a/IBMCertifiedAssociateDeveloperQiskit/01.7-Extend_Quantum_Circuits.ipynb
+++ b/IBMCertifiedAssociateDeveloperQiskit/01.7-Extend_Quantum_Circuits.ipynb
@@ -144,7 +144,7 @@
         "qc.initialize(state, normalize=False)\n",
         "sv = Statevector.from_instruction(qc)\n",
         "\n",
-        "qc.draw()\n",
+        "display(qc.draw())\n",
         "plot_bloch_multivector(sv)"
       ],
       "metadata": {
